--- a/web/public/css/text.css
+++ b/web/public/css/text.css
@@ -132,7 +132,7 @@
 }
 
 #title {
-  font-size: 20px;
+  font-size: 32px;
 }
 
 #questions {
